# mc-mini

./: .gitignore  CMakeLists.txt  exampleParameters
convergence_analysis_scripts/: convergece_Tau_benchmark.py  execute_tasks.py  lib_output_processing.py
convergence_analysis_scripts/convergence_tables/: test.txt
include/geometry/: dataWindow.h  domain.h
include/output/: output.h
include/problem/: problem.h
paramFiles/fallingSquare/: fallingSquare.prm
paramFiles/tauBenchmark/: tauBenchmark01  tauBenchmark02  tauBenchmark03  tauBenchmark04
source/: main.cpp
source/geometry/: domain.cpp  geometry.cpp
source/output/: output.cpp
source/problem/: advection.cpp  initialization.cpp  problem.cpp  solveRoutines.cpp
